--- a/README
+++ b/README
@@ -4,6 +4,10 @@ This repository is for the infrastructure documentation and SOPs(Standard
 Operating Procedures). These explain what we do, when we do it and, often,
 why we do it.
 
+== Cloning this repo ==
+login to lockbox01.phx2.fedoraproject.org
+git clone /git/infra-docs/
+
 git grep is your friend in this dir.
 Files should be in text.
 they will be outputted to:
