--- a/README
+++ b/README
@@ -6,7 +6,7 @@ why we do it.
 
 == Cloning this repo ==
 To write:
- login to lockbox01.phx2.fedoraproject.org
+ login to batcave01.phx2.fedoraproject.org
   git clone /git/infra-docs/
 
   anon:
