--- a/README
+++ b/README
@@ -5,33 +5,30 @@ Operating Procedures). These explain what we do, when we do it and, often,
 why we do it.
 
 == Cloning this repo ==
-To write:
+
+ If you plan to push changes (write) to this repo: 
+
  login to batcave01.phx2.fedoraproject.org
-  git clone /git/infra-docs/
 
-  anon:
-  git clone http://infrastructure.fedoraproject.org/infra/infra-docs.git/
+ git clone /git/infra-docs/
 
+ If you simply want to read or don't have access to push:
+
+ git clone https://infrastructure.fedoraproject.org/infra/infra-docs.git/
 
 git grep is your friend in this dir.
 Files should be in text.
 they will be outputted to:
 
-http://infrastructure.fedoraproject.org/infra/docs/
+https://infrastructure.fedoraproject.org/infra/docs/
 
 Information to include:
 
-== Contact Information ==
-Owner: 
-
-Contact: 
-
-Location: 
-
-Servers: 
-
-Purpose: 
-
+.. title: <Title of document>
+.. slug: <the filename>
+.. date: <Date created in YYYY-MM-DD>
+.. lastupdate: <Date last updated in YYYY-MM-DD>
+.. taxonomy: <Who is this doc for?>
 
 Migration from the Wiki:
 ==============
@@ -50,7 +47,3 @@ For each SOP:
 4. Change the wiki page to note that the SOP has been converted and redirect
 to a    wiki page that explains about the git repo and how to access it and/or a
 link to that  particular sop.
-
-
-
-
